# poc_azure_pipelines

./: README.md  pyproject.toml
