[tool.poetry]
name = "poc_azure_pipelines"
version = "0.1.0"
description = "Poc for Azure Pipelines with dummy code"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
